# Lib-manager

./: 97b37b56-d5ec-4c21-ab61-1f5f5794d1a4  README.md  books.json  main.py  pyproject.toml
tests/: test_main.py
