[project]
name = "library_manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HanRix1", email = "HanRix1@mail.ru"},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.6.8",
]
